Multipart putObject (3)